# poppy

./: README.md  meson.build
poppy/: dbus.c  flac_track.c  meson.build  opus_error.c  opus_track.c  pid.c  poppy.c  print_meta.c  signals.c  track.c  vorbis_track.c
poppy/include/: ch_map.h  dbus.h  def.h  flac_track.h  opus_error.h  opus_track.h  pid.h  poppy.h  print_meta.h  signals.h  signalsdef.h  track.h  vorbis_track.h
poppyctl/: meson.build  poppyctl.c
